--- a/.gitignore
+++ b/.gitignore
@@ -74,8 +74,13 @@ docs/_build/
 # PyBuilder
 target/
 
+# Ignore all Data Files
+data/*.csv
+data/*.xlsx
+
 # Jupyter Notebook
 .ipynb_checkpoints
+*.ipynb
 
 # IPython
 profile_default/
