--- a/.gitignore
+++ b/.gitignore
@@ -75,8 +75,8 @@ docs/_build/
 target/
 
 # Ignore all Data Files
-data/*.csv
-data/*.xlsx
+data/**/*.csv
+data/**/*.xlsx
 
 # Jupyter Notebook
 .ipynb_checkpoints
